# Django_HW

./: .gitignore  check_extensions.py  pyproject.toml  settings.py
barbershop/: context_processors.py  settings.py  urls.py  views.py
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py
main/: context_processors.py  views.py
main/management/commands/: create_test_user.py
static/: main.css  main.js
static/css/: main.css
static/js/: main.js
templates/: base.html  landing.html  order_detail.html  orders_list.html  thanks.html
templates/barbershop/: landing.html  order_detail.html  orders_list.html  thanks.html
templates/includes/: menu.html  order_card.html
