[project]
name = "django-hw"
version = "0.1.0"
description = ""
authors = [
    {name = "Dashi",email = "dorzhiev_dd@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
